# polynomint

./: Cargo.toml  README.md
src/: add.rs  index.rs  iter.rs  lib.rs  math.rs  mul.rs  rem.rs  sub.rs
