[package]
name = "polynomint"
version = "0.4.0"
authors = ["bit doer <bitdoer@gmail.com>"]
edition = "2018"
repository = "https://github.com/bitdoer/polynomint"
documentation = "https://docs.rs/polynomint"
description = "A no-dependency library for working with integer polynomials"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
